@@ -181,7 +181,17 @@
           </item>
          </layout>
         </item>
-        <item row="2" column="0">
+        <item row="2" column="1">
+         <widget class="QCheckBox" name="applyReplayGain">
+          <property name="text">
+           <string>Apply setting on connect</string>
+          </property>
+          <property name="toolTip">
+           <string>&lt;p&gt;MPD resets (to the value in its config file) the replaygain mode setting each time it is restarted. Cantata can work-around this by setting MPD to use the value defined here each time Cantata connects to MPD.&lt;/p&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
          <widget class="BuddyLabel" name="volumeStepLabel">
           <property name="text">
            <string>Volume step:</string>
@@ -194,7 +204,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="3" column="1">
          <widget class="QSpinBox" name="volumeStep">
           <property name="suffix">
            <string> %</string>
@@ -207,7 +217,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0" colspan="2">
+        <item row="4" column="0" colspan="2">
          <widget class="QLabel" name="outputsViewLabel">
           <property name="text">
            <string>Use the checkboxes below to control the active outputs.</string>
@@ -217,7 +227,7 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0" colspan="2">
+        <item row="5" column="0" colspan="2">
          <widget class="QListWidget" name="outputsView"/>
         </item>
        </layout>
